add resources // add social links // add dummy input box

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Preeepare: Visualize Your Progress"
+      content="Preeepare: Visualize Your Progression"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
